Adds custom styling

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -22,8 +22,8 @@
        routerLink="/plans"
        routerLinkActive #plans="routerLinkActive"
        [active]="plans.isActive">
-      <span class="material-icons">payment</span>
-      <span>Plans</span>
+      <span class="material-icons">list</span>
+      <span>Planos</span>
     </a>
 
     <a mat-tab-link
@@ -31,7 +31,7 @@
        routerLinkActive #settings="routerLinkActive"
        [active]="settings.isActive">
       <span class="material-icons">settings</span>
-      <span>Settings</span>
+      <span>Configs</span>
     </a>
   </nav>
 </div>
