Adds support for more languages

--- a/src/app/pages/plans/plans.html
+++ b/src/app/pages/plans/plans.html
@@ -1,4 +1,4 @@
-<div class="plans-container">
+<div class="plans-container" *ngIf="bibleData">
 
   <!-- ============================================= -->
   <!-- PLANO ATUAL -->
