--- a/src/app/pages/settings/settings.scss
+++ b/src/app/pages/settings/settings.scss
@@ -32,9 +32,10 @@
   color: #666;
 }
 
-.storage-card {
+.session-card {
   background: white;
   border-radius: 16px;
+  margin-bottom: 32px;
 }
 
 mat-card-header {
