--- a/src/app/pages/settings/settings.html
+++ b/src/app/pages/settings/settings.html
@@ -3,6 +3,7 @@
     <mat-icon class="header-icon">settings</mat-icon>
     <h1>{{ 'settings.title' | translate }}</h1>
     <p>{{ 'settings.subtitle' | translate }}</p>
+    <p><small><i>(v.{{version}})</i></small></p>
   </header>
 
   <!-- LANGUAGE CARD -->
